<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/WHITE"
    android:orientation="vertical"
    tools:context=".VerifyOTPActivity">

    <ImageView
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="?attr/actionBarSize"
        android:src="@drawable/back_arrow"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:contentDescription="@string/back_button"/>

    <TextView
        android:id="@+id/otp_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:fontFamily="@font/nunitosans_semibold"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="25sp"
        android:text="@string/otp_verification"/>

    <TextView
        android:id="@+id/otp_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/otp_details"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:textSize="16sp"
        android:fontFamily="@font/nunitosans_regular"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/mobile_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimaryDark"
            android:text="@string/mobile_dummy"
            android:textSize="16sp"
            android:fontFamily="@font/nunitosans_regular"/>
        <TextView
            android:id="@+id/edit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:fontFamily="@font/nunitosans_regular"
            android:textColor="@color/BLUE"
            android:text="@string/edit"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"/>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="30dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">
        <com.mukesh.OtpView
            android:id="@+id/otp_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:inputType="number"
            app:lineWidth="1.5dp"
            app:itemSpacing="10dp"
            app:itemCount="6"
            app:lineColor="@color/GREY_200"
            app:viewType="line"
            android:cursorVisible="false"/>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="30dp"/>

    <TextView
        android:id="@+id/invalid_otp"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/invalid_otp"
        android:fontFamily="@font/nunitosans_regular"
        android:gravity="center_horizontal"
        android:textColor="@color/RED_400"
        android:textSize="14sp"/>

    <Button
        android:id="@+id/verify_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/register_button"
        android:textColor="@color/WHITE"
        android:text="@string/verify"
        android:enabled="true"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="30dp"/>

    <TextView
        android:visibility="gone"
        android:id="@+id/resend_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/resend_code"
        android:fontFamily="@font/nunitosans_semibold"
        android:textColor="@color/GREEN_400"
        android:textSize="16sp"
        android:gravity="center_horizontal"/>

    <TextView
        android:id="@+id/resend_countdown"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/resend_countdown"
        android:fontFamily="@font/nunitosans_regular"
        android:textSize="16sp"
        android:gravity="center_horizontal"/>

</LinearLayout>