<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="15dp"
    app:cardElevation="3dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp"
        tools:ignore="UselessParent">
        <TextView
            android:id="@+id/confirm_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/confirm"
            android:fontFamily="@font/nunitosans_semibold"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="23sp"/>

        <TextView
            android:id="@+id/confirm_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nunitosans_regular"
            android:textSize="16sp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/confirm_message"
            android:lineSpacingExtra="3dp"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/cancel_otp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@+id/send_otp"
                android:layout_toStartOf="@id/send_otp"
                android:padding="10dp"
                android:textSize="16sp"
                android:fontFamily="@font/nunitosans_bold"
                android:textColor="@color/GREY_400"
                android:text="@string/cancel"/>
            <TextView
                android:id="@+id/send_otp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:paddingLeft="10dp"
                android:paddingStart="10dp"
                android:textSize="16sp"
                android:fontFamily="@font/nunitosans_bold"
                android:textColor="@color/GREEN_400"
                android:text="@string/send_otp"
                tools:ignore="RtlSymmetry" />
        </RelativeLayout>
    </LinearLayout>
</RelativeLayout>