<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/WHITE"
    android:orientation="vertical"
    tools:context=".SendOTPActivity">

    <ImageView
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="?attr/actionBarSize"
        android:src="@drawable/back_arrow"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:contentDescription="@string/back_button"/>

    <TextView
        android:id="@+id/mobile_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:fontFamily="@font/nunitosans_semibold"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="25sp"
        android:text="@string/enter_mobile_number"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="40dp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:gravity="center_vertical">
        <com.hbb20.CountryCodePicker
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:gravity="center_vertical"
            android:id="@+id/countryCodeHolder"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            app:ccp_defaultNameCode="BD"
            app:ccp_showNameCode="true"
            app:ccp_showPhoneCode="true"
            app:ccp_autoDetectCountry="true"
            app:ccp_countryAutoDetectionPref="SIM_ONLY"
            app:ccp_autoDetectLanguage="true"
            app:ccp_showArrow="true"
            app:ccpDialog_keyboardAutoPopup="true"
            app:ccpDialog_allowSearch="true"
            app:ccpDialog_showPhoneCode="true"
            app:ccpDialog_showFlag="true"
            app:ccpDialog_showTitle="true"
            app:ccp_hintExampleNumber="true"
            app:ccp_hintExampleNumberType="MOBILE"/>

        <EditText
            android:layout_toRightOf="@+id/countryCodeHolder"
            android:layout_toEndOf="@id/countryCodeHolder"
            android:layout_toLeftOf="@+id/mobile_valid_sign"
            android:layout_toStartOf="@+id/mobile_valid_sign"
            android:id="@+id/mobile_number"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:maxLines="1"
            android:inputType="phone"
            android:background="@color/WHITE"
            android:fontFamily="@font/nunitosans_regular"
            android:importantForAutofill="no"
            tools:ignore="LabelFor"/>

        <ImageView
            android:id="@+id/mobile_valid_sign"
            android:visibility="invisible"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/check_green"
            android:contentDescription="@string/checkbox"/>
    </RelativeLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:background="@color/GREY_200"/>

    <TextView
        android:id="@+id/agreement"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/agreement"
        android:fontFamily="@font/nunitosans_regular"
        android:paddingTop="30dp"
        android:paddingBottom="30dp"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:gravity="center"/>

    <Button
        android:id="@+id/next_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/register_disabled_button"
        android:textColor="@color/WHITE"
        android:text="@string/next"
        android:enabled="false"/>
</LinearLayout>